--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,11 @@
     "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
+      "@": ["src"],
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "vite.config.ts"],
+  "exclude": ["node_modules", "dist", "**/*.js"]
+  // "references": [{ "path": "./tsconfig.node.json" }]
 }
